--- a/apps/web-client/src/app/globals.css
+++ b/apps/web-client/src/app/globals.css
@@ -6,6 +6,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer utilities {
+  .wrapper {
+    @apply max-w-[100rem] lg:mx-auto p-5 md:px-10 w-full;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
